--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,27 @@
 [package]
-name = "RustOS"
+name = "rust_os"
 version = "0.1.0"
 authors = ["starfleetcadet75 <starfleetcadet75@gmail.com>"]
 
-[lib]
-crate-type = ["staticlib"]
-
 [dependencies]
-rlibc = "1.0"
-volatile = "0.1.0"
-spin = "0.4.5"
+spin = "0.4.6"
+volatile = "0.2.3"
+uart_16550 = "0.1.0"
+x86_64 = "0.2.6"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
+
+[dev-dependencies]
+array-init = "0.0.3"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
+
+[package.metadata.bootimage]
+default-target = "x86_64-rust_os.json"
+
